// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MasonryGrid should be rendered correctly with 1 column 1`] = `
<div
  className="row"
>
  <div
    className="col-12"
  >
    <div>
      Item #1
    </div>
    <div>
      Item #2
    </div>
    <div>
      Item #3
    </div>
    <div>
      Item #4
    </div>
    <div>
      Item #5
    </div>
  </div>
</div>
`;

exports[`MasonryGrid should be rendered correctly with 3 columns 1`] = `
<div
  className="row"
>
  <div
    className="col-4"
  >
    <div>
      Item #1
    </div>
    <div>
      Item #4
    </div>
  </div>
  <div
    className="col-4"
  >
    <div>
      Item #2
    </div>
  </div>
  <div
    className="col-4"
  >
    <div>
      Item #3
    </div>
    <div>
      Item #5
    </div>
  </div>
</div>
`;

exports[`MasonryGrid should be rendered correctly with 4 columns 1`] = `
<div
  className="row"
>
  <div
    className="col-3"
  >
    <div>
      Item #1
    </div>
    <div>
      Item #5
    </div>
  </div>
  <div
    className="col-3"
  >
    <div>
      Item #2
    </div>
  </div>
  <div
    className="col-3"
  >
    <div>
      Item #3
    </div>
  </div>
  <div
    className="col-3"
  >
    <div>
      Item #4
    </div>
  </div>
</div>
`;
